# SeedSeeker

./: .gitattributes  README.md  hello.py  pyproject.toml  ruff.toml  seedseeker.troff  test.out.txt  test.txt
.github/workflows/: build.yaml  ci.yaml  ruff.yaml
algorithms/fibonacci/: main.py
algorithms/lcg/: main.py
doc/: main.tex
seedseeker/cli/: __init__.py
seedseeker/generators/: defs.py  doom.py  fibonacci.py  lcg.py  mersenne.py  primes.py  ran3.py  utils.py  xoshiro.py
src/seedseeker/: __init__.py  __main__.py  defs.py
src/seedseeker/cli/: main.py
src/seedseeker/generators/: __init__.py  doom.py  fibonacci.py  filestream.py  lcg.py  mersenne.py  ran3.py  xoshiro.py
src/seedseeker/utils/: filestream.py  iterator.py
tests/: test_generators.py  test_reversers.py
