[project]
name = "seedseeker"
version = "0.1.0"
description = "Forensic Analysis of Random Number Generators"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["matplotlib", "mod", "PyQt6"]

[tool.uv]
required-version = ">=0.6.0"
dev-dependencies = ["ruff>=0.9.0", "basedpyright>=1.28"]
