[project]
name = "seedseeker"
version = "0.1.0"
description = "Forensic Analysis of Random Number Generators"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mod", "randcrack"]

[dependency-groups]
dev = ["ruff>=0.9.0", "basedpyright>=1.28", "pytest>=8.2.1,<9"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
seedseeker = "seedseeker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
